<resources>
    <string name="app_name">Teachers</string>

    <!-- Login Fragment -->
    <string name="login_forgot_password">забыл пароль</string>
    <string name="login_login">login</string>
    <string name="login_hint_login">login</string>
    <string name="login_hint_password">password</string>

    <!--  Forgot Password Fragment  -->
    <string name="forgot_send_to_email">Отправить пароль на почту</string>
    <string name="forgot_password_email">login</string>
    <string name="forgot_password_left_time">60</string>
    <string name="login_toast_enter_email">Введите почту</string>
    <string name="login_toast_enter_password">Введите пароль</string>

    <!--  Filter Fragment  -->

    <string name="main_menu_exit">Выйти</string>
    <string name="next">next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Filter_groups_hint">Группа</string>
    <string name="Filter_subjects_hint">Предмет</string>
    <string name="Filter_semesters_hint">Семестр</string>

    <!--  Exam marks  -->
    <string-array name="exam_marks">
        <item>—</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="credit_type">
        <item>—</item>
        <item>зач</item>
        <item>незач</item>
    </string-array>

</resources>