<?xml version="1.0" encoding="utf-8"?>
<layout>
<data>
   <variable
       name="viewmodel"
       type="com.company.teachers.viewModels.FiltersViewModel" />
</data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Fragments.FiltersFragment">

   <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:id="@+id/filter_btn_next"
       android:layout_width="55dp"
       android:layout_height="55dp"
       android:layout_marginEnd="16dp"
       android:layout_marginBottom="16dp"
       android:src="@drawable/ic_btn_next"
       app:tint="@android:color/white"
       android:backgroundTint="@color/colorPrimary"
       android:contentDescription="@string/next"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent" />

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/subjects"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
       android:layout_margin="16dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:hint="@string/Filter_subjects_hint">

      <AutoCompleteTextView
          android:id="@+id/subjects_list"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@{viewmodel.subject}"
          style="@style/Widget.App.ExposedDropdownMenu"
          android:inputType="none"
          tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
   </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/groups"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
       android:layout_margin="16dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/subjects"
       android:hint="@string/Filter_groups_hint">

      <AutoCompleteTextView
          android:id="@+id/groups_list"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@{viewmodel.group}"
          style="@style/Widget.App.ExposedDropdownMenu"
          android:inputType="none"
          tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
   </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/semesters"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
       android:layout_margin="16dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/groups"
       android:hint="@string/Filter_semesters_hint">

      <AutoCompleteTextView
          android:id="@+id/semesters_list"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@{viewmodel.semester}"
          style="@style/Widget.App.ExposedDropdownMenu"
          android:inputType="none"
          tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
   </com.google.android.material.textfield.TextInputLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>